--- a/app/main/views/contract/contract.edit.html
+++ b/app/main/views/contract/contract.edit.html
@@ -20,7 +20,7 @@
                             {{contact.contactName}} - {{contact.email}}
                         </option>
                         <option value="-1"> - Tạo mới - </option>
-                        <option value="0"> - Để trống - </option>
+                        <!-- <option value="0"> - Để trống - </option> -->
                     </select>
                     <!-- <select class="edit_contract form-control" ng-model="editContractData.contactPointId">
                         <option ng-repeat="contact in editContractData.partner.partnerContacts" value="{{contact.id}}">
