--- a/app/main/views/settings/settings.vnu.html
+++ b/app/main/views/settings/settings.vnu.html
@@ -13,7 +13,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li ng-if="role == 'ADMIN_UNIT'"><a data-toggle="collapse" data-target="#add_unit" class="cursor"> Thêm đơn vị theo dõi </a>
                         </li>
-                        <li><a data-toggle="collapse" data-target="#add_uet_man" class="cursor"> Thêm người kí kết ({{user.rolesAndSigningLevel.name}}) </a>
+                        <li><a data-toggle="collapse" data-target="#add_uet_man" class="cursor"> Thêm người kí ({{user.rolesAndSigningLevel.name}}) </a>
                         </li>
                         <!-- <li><a data-toggle="collapse" data-target="#add_type_contract" class="cursor"> Thêm loại hợp đồng </a>
                             </li> -->
@@ -162,7 +162,7 @@
                     </li>
                 </ul>
                 <div class="form-group">
-                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Tên người kí kết ({{user.rolesAndSigningLevel.name}})</label>
+                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Tên người kí ({{user.rolesAndSigningLevel.name}})</label>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <input type="text" name="country" class="form-control col-md-10" ng-model="input.uetManName" required />
                     </div>
@@ -196,7 +196,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12" ng-init="getAllUetMan()">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Người kí kết ({{user.rolesAndSigningLevel.name}})</h2>
+                        <h2>Người kí ({{user.rolesAndSigningLevel.name}})</h2>
                         <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search for..." ng-model="uet_man" style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
@@ -208,8 +208,8 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>Mã người kí kết</th>
-                                    <th>Người kí kết</th>
+                                    <th>Mã người kí</th>
+                                    <th>Người kí</th>
                                     <th>Chức vụ</th>
                                     <th ng-if="role != 'UNIT'">Đơn vị</th>
                                     <th>Sửa</th>
