fix import excel

--- a/app/main/views/contract/contract.edit.html
+++ b/app/main/views/contract/contract.edit.html
@@ -98,15 +98,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Kinh phí: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Kinh phí: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input id="middle-name" class="edit_contract form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="editContractData.funding">
+                    <input  class="edit_contract form-control col-md-7 col-xs-12" type="text"  ng-model="editContractData.funding">
                 </div>
             </div>
             <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Lưu ý: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Lưu ý: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <textarea class="form-control" rows="8" cols="6" name="middle-name" ng-model="editContractData.notice"></textarea>
+                    <textarea class="form-control" rows="8" cols="6"  ng-model="editContractData.notice"></textarea>
                 </div>
             </div>
             <div class="form-group">
@@ -115,9 +115,9 @@
                 <label class="control-label col-md-2 col-sm-1 col-xs-12" for="khong">Không  <input class="edit_contract" type="radio" name="renew" id="khong" value="false" ng-model="editContractData.renew"></label>
             </div>
             <!-- <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Kết quả hợp tác: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Kết quả hợp tác: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="editContractData.result">
+                    <input  class="form-control col-md-7 col-xs-12" type="text"  ng-model="editContractData.result">
                 </div>
             </div> -->
             <div class="form-group">
