--- a/app/main/views/contract/contract.renew.html
+++ b/app/main/views/contract/contract.renew.html
@@ -209,15 +209,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Kinh phí: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Kinh phí: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="renewContractData.funding">
+                    <input  class="form-control col-md-7 col-xs-12" type="text"  ng-model="renewContractData.funding">
                 </div>
             </div>
             <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Lưu ý: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Lưu ý: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <textarea class="form-control" rows="8" cols="6" name="middle-name" ng-model="renewContractData.notice"></textarea>
+                    <textarea class="form-control" rows="8" cols="6"  ng-model="renewContractData.notice"></textarea>
                 </div>
             </div>
             <div class="form-group">
@@ -230,9 +230,9 @@
                 </label>
             </div>
             <!-- <div class="form-group">
-                <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Kết quả hợp tác: </label>
+                <label  class="control-label col-md-4 col-sm-4 col-xs-12">Kết quả hợp tác: </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="renewContractData.result">
+                    <input  class="form-control col-md-7 col-xs-12" type="text"  ng-model="renewContractData.result">
                 </div>
             </div> -->
             <div class="form-group">
