--- a/app/main/views/partner/partner.annualActivity.all.html
+++ b/app/main/views/partner/partner.annualActivity.all.html
@@ -7,7 +7,7 @@
             <ul class="nav navbar-right panel_toolbox">
                 <li class="dropdown">
                     <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Thêm
+                            Thêm/Tùy chọn
                             <i class="fa fa-wrench"></i>
                         </a>
                     <ul class="dropdown-menu" role="menu">
